@@ -26,3 +26,4 @@ Jérôme Pinot <ngc891@gmail.com>
 Rajeev Ranjan (Rajeev) <rajeev.r@samsung.com> <rajeev.jnnce@gmail.com>
 ChunEon Park (Hermet) <hermet@hermet.pe.kr>
 Kim Shinwoo <kimcinoo.efl@gmail.com>
+Michael Bouchaud (yoz) <michael.bouchaud@gmail.com>
